<resources>
    <string name="app_name">android-activity-trace-demo</string>
    <string name="btn_show_custom_dialog">Show Custom Dialog</string>
    <string name="btn_show_request_permission_dialog">Show Request Permission Dialog</string>

    <string name="btn_demo_switch_activity">Demo Switch Activity</string>

    <string name="tv_title_current_page">Current: %1$s</string>
    <string name="btn_demo_start_next_page">Next</string>
    <string name="btn_demo_start_previous_page">Back</string>
    <string name="btn_demo_start_specific_page">Start Specific Page</string>

    <string name="button_goto_C">Goto C</string>
    <string name="button_goto_E">Goto E</string>
    <string name="button_goto_F">Goto F</string>
    <string name="button_goto_G">Goto G</string>

    <string name="edittext_hint_enter_something">Enter something</string>
</resources>
