<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_demo_switch_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_title_current_page"
        android:textStyle="bold"
        android:textSize="36sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_previous_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_demo_switch_activity"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_hint_enter_something"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_demo_switch_activity"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_previous_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_previous_page"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_demo_start_previous_page"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toBottomOf="@+id/tv_demo_switch_activity"
        app:layout_constraintBottom_toTopOf="@+id/btn_start_specific_page"
        app:layout_constraintEnd_toStartOf="@+id/btn_start_next_page"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_next_page"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_demo_start_next_page"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="@+id/btn_start_previous_page"
        app:layout_constraintBottom_toBottomOf="@+id/btn_start_previous_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_start_previous_page"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start_specific_page"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_demo_start_specific_page"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_previous_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>